# SFS-AIbofs-social-media

./: .env.example  .gitignore  .replit  README.md  app.py  book.html  book.js  bots.html  bots.js  config.py  data.json  data.sqlite-shm  data.sqlite-wal  db_models.py  gitignore  index.html  main.py  main_flask.py  manifest.webmanifest  offline.html  onboarding.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  script.js  server.js  server_wrapper.py  shop.html  shop.js  sms.py  socialscale-demo.html  start-ai-chat.sh  styles.css  sw.js  wsgi_adapter.py  wsgi_app.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1755960960171_1755960960173.txt  Pasted--Replit-Agent-Prompt-SmartFlow-AIbot-Social-SocialScale-Upgrade-What-this-project-does-1-2-1755948531081_1755948531082.txt  Pasted--can-i-put-this-in-aswell--1755958362789_1755958362793.txt  Pasted--path-main-py-from-future-import-annotations-import-asyncio-import-json-import-re-from-datacl-1755357492748_1755357492748.txt  Pasted--path-requirements-txt-fastapi-0-111-uvicorn-standard-0-30-path-replit-run-python3--1755352084771_1755352084772.txt  Pasted--path-requirements-txt-fastapi-0-111-uvicorn-standard-0-30-pydantic-2-7-openai-1-40-path--1755362311008_1755362311010.txt  Pasted--path-requirements-txt-fastapi-0-111-uvicorn-standard-0-30-pydantic-2-7-path-gitignore--1755371962520_1755371962521.txt  Pasted-I-ll-help-you-create-the-files-with-the-exact-content-as-specified-Let-me-first-read-the-complete-a-1755356888678_1755356888678.txt  (+10 more)
(+57 files in other folders)
